src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  font-family: "Rubik", sans-serif;
}

h1, h2, h3 {
  font-family: "Rubik", sans-serif;
  font-weight: 600;
}

code, code * {
  font-family: "Spline Sans Mono", monospace;
  font-style: normal !important;
  font-weight: 400 !important;
}

.docimg {
    display: block;
    margin: 10px auto;
}

p {
    padding-top: 10px;
    padding-bottom: 5px;
}

.menu__link--sublist-caret:after {
    min-width: .6rem !important;
    width: .6rem !important;
}

.navbar__logo {
    height: 40px;
}

/* You can override the default Infima variables here. */
:root {
  /* Fluvio Color Palette */

  /* Shades of Fluvio Logo Color */
  --fluvio-800: #2A1B3D;
  --fluvio-600: #412E69;
  --fluvio-400: #44318D;
  --fluvio-200: #7D67A3;

  --green-800: #1D4249;
  --green-400: #3B945E;
  --green-200: #57BA98;

  --ocean-400: #495890;

  --red-400: #D54344;

  --rose-400: #D83F87;

  --slate-200: #A4B3B6;

  --white: #FFFFFF;

  --ifm-color-primary: var(--fluvio-400);
  --ifm-color-primary-dark: var(--fluvio-200);
  --ifm-color-primary-darker: var(--fluvio-600);
  --ifm-color-primary-darkest: var(--fluvio-800);
  --ifm-color-primary-light: #33925d;
  --ifm-color-primary-lighter: #359962;
  --ifm-color-primary-lightest: #3cad6e;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-color-primary: var(--fluvio-200);
  --ifm-color-primary-dark: var(--fluvio-400);
  --ifm-color-primary-darker: var(--fluvio-600);
  --ifm-color-primary-darkest: var(--fluvio-800);
  --ifm-color-primary-light: #29d5b0;
  --ifm-color-primary-lighter: #32d8b4;
  --ifm-color-primary-lightest: #4fddbf;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

